[package]
name = "jackpoint"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
thiserror = "2.0.12"
reqwest = { version = "0.12.22", features = ["json"] }
log = "0.4.27"
git2 = "0.20.2"
serde_json = "1.0.140"
wiremock = "0.6.4"
tokio = { version = "1.46.1 " , features = ["rt-multi-thread"] }
tempfile = "3.20.0"
anyhow = "1.0.98"
config = "0.15.13"
bollard = "0.19.1"
urlencoding = "2.1.3"
